# lumi_ai

./: CMakeLists.txt  build_linux.sh  build_osx.sh  build_win.bat  preprocess_image.py
Linux/: libgna.so.3.0.0.1910  libopenvino_c.so.2230  libopenvino_ir_frontend.so.2230  libopenvino_paddle_frontend.so.2022.3.0  libopenvino_tensorflow_frontend.so.2230
Windows/x86_64/: plugins.xml
macOS/OVYoloCpp.bundle/Contents/: Info.plist
macOS/OVYoloCpp.bundle/Contents/MacOS/: OVYoloCpp
macOS/OVYoloCpp.bundle/Contents/libs/: libopenvino_c.dylib  libopenvino_ir_frontend.dylib  libopenvino_paddle_frontend.dylib  libopenvino_tensorflow_fe.dylib  libtbb.dylib  libtbb_debug.dylib  libtbb_preview.dylib  libtbb_preview_debug.dylib  libtbbmalloc.dylib  libtbbmalloc_debug.dylib  libtbbmalloc_proxy.dylib  libtbbmalloc_proxy_debug.dylib
source/: lumi.cc  lumi.h  main.cc  ov_yolo.cc  ov_yolo_plugin_api.h
source/win/: dllmain.cpp  framework.h  pch.h
